Added league finals and new graphics

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -55,7 +55,8 @@ html(lang='en')
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='/') SFLUltimate
+            a.navbar-brand(href='/')
+              img(src='/images/nav-logo.png')
           .collapse.navbar-collapse
             ul.nav.navbar-nav.navbar-left
               each link in navLinks
