--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -17,7 +17,7 @@ block content
     .jumbotron
       .row
         .col-sm-4
-          img.img-responsive(src='/images/logo-circled.png' style='margin: 0 auto; max-width:90%')
+          img.logo-circled.img-responsive(src='/images/logo-circled.png')
         .col-sm-8
           h1 Welcome!
           p South Florida Ultimate's 2016 Spring League season is now under way!
