--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5821,6 +5821,22 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+#header {
+  margin-top: 2em; }
+
+.navbar-brand {
+  position: relative;
+  width: 174px; }
+  .navbar-brand img {
+    position: absolute;
+    top: -25px;
+    left: 20px;
+    width: 130px;
+    height: 98.8px; }
+
+.logo-circled {
+  margin: 0 auto 1em auto; }
+
 #footer {
   margin-top: 30px;
   border-top: 1px solid #eeeeee;
