--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -1,3 +1,26 @@
+#header {
+  margin-top: 2em;
+}
+
+$logo-width: 130px;
+
+.navbar-brand {
+  position: relative;
+  width: 174px;
+
+  img {
+    position: absolute;
+    top: -25px;
+    left: 20px;
+    width: $logo-width;
+    height: (152/200) * $logo-width;
+  }
+}
+
+.logo-circled {
+  margin: 0 auto 1em auto;
+}
+
 #footer {
   margin-top: 30px;
   border-top: 1px solid #eeeeee;
