--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -17,7 +17,7 @@ block content
 
     p This spring we'll be back at Ives Estates Park, just off I-95 at Ives Dairy Road.
     iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31005.449205043788!2d-80.19220334227433!3d25.967580427814696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ac3d69e2ec2d%3A0xa21f0a46872e76b8!2sIves+Estate+Park!5e0!3m2!1sen!2sus!4v1452868641288" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen)
-    p Regular season games will be <strong>Sunday afternoons at either 3pm, 5pm or 7pm, starting February 21st</strong>. We're planning on 9 weeks of play, skipping March 27th for Easter and March 6th due to field closures, and ending on April 24th. <strong>Finals are tentatively set for Saturday, May 14th</strong> at Amelia Earhart Park.
+    p Regular season games will be <strong>Sunday afternoons at either 3pm, 5pm or 7pm, starting February 21st</strong>. We're planning on 9 weeks of play, skipping March 27th for Easter and March 6th due to field closures, and ending on April 24th. <strong>Finals are set for Saturday, Apr 30th</strong> at Amelia Earhart Park.
 
     p Registration will be open <strong>February 1st-13th</strong> and the costs are:
     ul
