--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -26,18 +26,20 @@ block content
           tr(ng-repeat="game in games | filter:colorFilter" ng-class="(game.timestamp - $parent.today > 0) ? '':'text-muted' ")
             td {{game.date | date: 'MMM d'}}
             td {{game.time}}
-            td {{game.home}} vs. {{game.away}}
+            td 
+              span {{game.home}} vs. {{game.away}} 
+              span(ng-if="game.homeScore && game.awayScore") ({{game.homeScore}}-{{game.awayScore}})
           tr(ng-class="(1461974400000 - $parent.today > 0) ? '':'text-muted' ")
             td Apr 30
-            td All day
-            td League Finals
+            td 10am-4:30pm
+            td League Finals (at Amelia Earhart Park)
 
 block js
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
   script.
 
     angular.module("scheduleApp", [])
-      .controller("ScheduleViewController",function ($http, $scope) {
+      .controller("ScheduleViewController",function ($http, $scope, $filter) {
 
         $scope.games = [];
         $scope.teams = [];
@@ -56,10 +58,17 @@ block js
             if (game.away === color || game.home === color) {
 
               if (game.away === color) {
-                var home  = game.home;
-                var away  = game.away;
+                var home      = game.home;
+                var homeScore = game.homeScore;
+
+                var away      = game.away;
+                var awayScore = game.awayScore;
+
                 game.home = away;
+                game.homeScore = awayScore;
+
                 game.away = home;
+                game.awayScore = homeScore;
               }
 
               if (game.home === color) {
@@ -89,6 +98,65 @@ block js
           });
 
           $scope.teams = teams;
+
+            
+          var queryStats = $http.get("/stats.csv");
+          queryStats.success(function (stats) {
+            
+            stats   = stats.split('\n');
+            var headers = stats.splice(0,1)[0].split(',');
+
+            var playedGames = headers.filter(function (d) {
+              return d.toLowerCase().indexOf('scores') > -1;
+            });
+
+
+            stats = stats.map(function (stat, i) {
+  
+              var o = {};
+              stat  = stat.split(',');
+
+              stat.forEach(function (d, i) {
+                o[headers[i]] = d;            
+              });
+
+              return o;
+            });
+
+            var scores = {};
+
+            stats = stats.forEach(function (stat) {
+
+              var statColor = stat["Team Color"];
+
+              if (!scores[statColor]) {
+                scores[statColor] = {};
+              }
+
+              playedGames.forEach(function (playedGame) {
+
+                if (!scores[statColor][playedGame]) {
+                  scores[statColor][playedGame] = 0;
+                }
+
+                var points = stat[playedGame].length > 0 ? parseInt(stat[playedGame]): 0;
+                scores[statColor][playedGame] += points;
+              });
+            });
+
+
+            $scope.games = $scope.games.map(function (game) {
+
+              var date = $filter('date')(game.date, 'MM/dd/yy');
+
+              game.homeScore = scores[game.home][date +" Scores"]  
+              game.awayScore = scores[game.away][date +" Scores"];
+
+              return game;
+            });
+          });
+
+
         });
 
         query.error(function (err) {
