--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -10,6 +10,11 @@ block content
     h1 Spring League Stats
     section(ng-controller='StatsViewController')
 
+      .alert.alert-info
+        i.fa.fa-info-circle
+        strong  Incomplete Stats: 
+        span We still have yet to put in stats for the following teams from <u>Week 3</u> and <u>Week 4</u>: Blue, Yellow, White, & Black
+
       h2 Leaderboard
 
       table.table.table-striped
