Added white stats

--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -13,7 +13,7 @@ block content
       .alert.alert-info
         i.fa.fa-info-circle
         strong  Incomplete Stats: 
-        span We still have yet to put in stats for the following teams from <u>Week 3</u> and <u>Week 4</u>:  Yellow, White, & Black
+        span We still have yet to put in stats for the following teams from <u>Week 3</u> and <u>Week 4</u>:  Yellow & Black
 
       h2 Leaderboard
 
