Added terms, conditions, and privacy policy to website, as well as registration

--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -23,6 +23,7 @@ $logo-width: 130px;
 
 #footer {
   margin-top: 30px;
+  margin-bottom: 10px;
   border-top: 1px solid #eeeeee;
   padding-top: 30px;
   color: #777777;
