--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -94,8 +94,7 @@ html(lang='en')
       a(href='mailto:sflultimate@gmail.com' target='blank')
         i.fa.fa-envelope
 
-      //- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-      span Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
+      span Organized by South Florida Ultimate Inc., a local non-for-profit.
 
 
     //- JAVASCRIPT
