--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5839,6 +5839,7 @@ button.close {
 
 #footer {
   margin-top: 30px;
+  margin-bottom: 10px;
   border-top: 1px solid #eeeeee;
   padding-top: 30px;
   color: #777777; }
