--- a/templates/views/privacy.jade
+++ b/templates/views/privacy.jade
@@ -2,32 +2,34 @@ extends ../layouts/default
 
 block content
   .container
-    h1 Privacy Policy
-    p.
-      This privacy policy discloses the privacy practices for sflultimate.com. This privacy policy applies solely to information collected by this web site. It will notify you of the following:
-    ul
-      li What personally identifiable information is collected from you through the web site, how it is used and with whom it may be shared.
-      li What choices are available to you regarding the use of your data.
-      li The security procedures in place to protect the misuse of your information.
-      li How you can correct any inaccuracies in the information.
+    .row
+      .col-sm-8.col-sm-offset-2
+        h1 Privacy Policy
+        p.
+          This privacy policy discloses the privacy practices for sflultimate.com. This privacy policy applies solely to information collected by this web site. It will notify you of the following:
+        ul
+          li What personally identifiable information is collected from you through the web site, how it is used and with whom it may be shared.
+          li What choices are available to you regarding the use of your data.
+          li The security procedures in place to protect the misuse of your information.
+          li How you can correct any inaccuracies in the information.
 
-    h3 Information Collection, Use, and Sharing 
-    p We are the sole owners of the information collected on this site. We only have access to/collect information that you voluntarily give us via email or other direct contact from you. We will not sell or rent this information to anyone.
-    p We will use your information to respond to you, regarding the reason you contacted us. We will not share your information with any third party outside of our organization, other than as necessary to fulfill your request, e.g. to ship an order, process a payment.
-    p Unless you ask us not to, we may contact you via email in the future to tell you regarding changes to this privacy policy.
+        h3 Information Collection, Use, and Sharing 
+        p We are the sole owners of the information collected on this site. We only have access to/collect information that you voluntarily give us via email or other direct contact from you. We will not sell or rent this information to anyone.
+        p We will use your information to respond to you, regarding the reason you contacted us. We will not share your information with any third party outside of our organization, other than as necessary to fulfill your request, e.g. to process a payment.
+        p Unless you ask us not to, we may contact you via email in the future to tell you regarding changes to this privacy policy.
 
-    h3 Your Access to and Control Over Information 
-    p You may opt out of any future contacts from us at any time. You can do the following at any time by contacting us via the email address or phone number given on our website:
-    ul
-      li See what data we have about you, if any.
-      li Change/correct any data we have about you.
-      li Have us delete any data we have about you.
-      li Express any concern you have about our use of your data.
+        h3 Your Access to and Control Over Information 
+        p You may opt out of any future contacts from us at any time. You can do the following at any time by contacting us via the email address or phone number given on our website:
+        ul
+          li See what data we have about you, if any.
+          li Change/correct any data we have about you.
+          li Have us delete any data we have about you.
+          li Express any concern you have about our use of your data.
 
-    h3 Security 
-    p We take precautions to protect your information. When you submit sensitive information via the website, your information is protected both online and offline.
-    p Wherever we collect sensitive information (such as credit card data), that information is encrypted and transmitted to us in a secure way. You can verify this by looking for a closed lock icon at the bottom of your web browser, or looking for "https" at the beginning of the address of the web page.
-    p While we use encryption to protect sensitive information transmitted online, we also protect your information offline. Only employees who need the information to perform a specific job (for example, billing or customer service) are granted access to personally identifiable information. The computers/servers in which we store personally identifiable information are kept in a secure environment.
+        h3 Security 
+        p We take precautions to protect your information. When you submit sensitive information via the website, your information is protected both online and offline.
+        p Wherever we collect sensitive information (such as credit card data), that information is encrypted and transmitted to Braintree payments and never actually stored on our servers.
+        p While we use encryption to protect sensitive information transmitted online, we also protect your information offline. Only employees who need the information to perform a specific job (for example, billing or customer service) are granted access to personally identifiable information. The computers/servers in which we store personally identifiable information are kept in a securely managed environment.
 
-    h3 Updates
-    p Our Privacy Policy may change from time to time and all updates will be posted on this page.
+        h3 Updates
+        p Our Privacy Policy may change from time to time and all updates will be posted on this page.
