--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -33,8 +33,14 @@ block content
             td {{$index + 1}}
             td
               span.team-color(ng-class="player['Team Color'].toLowerCase()" style="opacity: 0.5; margin-left: 1em;") 
-            td {{player["First Name"]}}
-            td {{player["Last Name"]}}
+            td.
+              {{player["First Name"]}}
+              <span class="badge" ng-if="awards[player.Gender].Overall === player.Overall"   ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">MVP</span>
+              <span class="badge" ng-if="awards[player.Gender].Assists === player.Assists"   ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">Assist Leader</span>
+              <span class="badge" ng-if="awards[player.Gender].Assists === player.Scores"    ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">Score Leader</span>
+              <span class="badge" ng-if="awards[player.Gender].Defenses === player.Defenses" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">Defenses Leader</span>
+            td.
+              {{player["Last Name"]}}
             td {{player["Assists"]}}
             td {{player["Scores"]}}
             td {{player["Defenses"]}}
@@ -59,7 +65,13 @@ block content
             td {{$index + leaderboard.length + 1}}
             td
               span.team-color(ng-class="player['Team Color'].toLowerCase()" style="opacity: 0.5; margin-left: 1em;") 
-            td {{player["First Name"]}}
+            td. 
+              {{player["First Name"]}}
+              <span class="badge" ng-if="awards[player.Gender].Overall === player.Overall"   ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">MVP</span>
+              <span class="badge" ng-if="awards[player.Gender].Assists === player.Assists"   ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">Assist Leader</span>
+              <span class="badge" ng-if="awards[player.Gender].Assists === player.Scores"    ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">Score Leader</span>
+              <span class="badge" ng-if="awards[player.Gender].Defenses === player.Defenses" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">Defenses Leader</span>
+
             td {{player["Last Name"]}}
             td {{player["Assists"]}}
             td {{player["Scores"]}}
@@ -69,64 +81,4 @@ block content
 block js
   script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')
-  script.
-    angular.module('StatsApp', [])
-      .controller("StatsViewController",function ($http, $scope) {
-
-      var query = $http.get("/stats.csv");
-
-      query.success(function (data) {
-
-        var rows    = data.split("\n");
-        var headers = rows.splice(0,1)[0].split(",");
-
-        rows = rows.map(function (row) {
-
-          row   = row.split(",");
-          var o = {
-            Assists: 0,
-            Scores: 0,
-            Defenses: 0
-          };
-
-          row.forEach(function (cell, i) {
-
-            var column = headers[i];
-            
-            if (column) {
-
-              var cellNum = parseInt(cell) || 0;
-
-              if (column.indexOf("Assists") > -1) {
-                o.Assists  += cellNum;
-              }
-
-              if (column.indexOf('Scores') > -1) {
-                o.Scores   += cellNum;
-              }
-
-              if (column.indexOf('Defenses') > -1) {
-                o.Defenses += cellNum;
-              }
-
-              o[column] = cell;
-            }
-
-          });
-
-          o.Overall = o.Assists + o.Scores + o.Defenses
-
-          return o;
-        });
-
-        rows = _.sortBy(rows, function (d) {return d.Overall;}).reverse();
-
-        $scope.leaderboard = rows.splice(0,10);
-        $scope.contenders  = rows;
-
-      });
-
-      query.error(function (e) {
-        alert("Error connecting to database.");
-      })
-    });
+  script(src='/js/stats.js')
