--- a/templates/views/community.jade
+++ b/templates/views/community.jade
@@ -1,9 +1,9 @@
 extends ../layouts/default
 
 block head
-  meta(property="og:title"        content="League Teams")
+  meta(property="og:title"        content="Local Broward/Dade Pickups")
   meta(property="og:url"          content="http://www.sflultimate.com/pickup")
-  meta(property="og:description"  content="Learn about local teams and pickups.")
+  meta(property="og:description"  content="Learn about local pickup near you!")
 
 block content
   .container(ng-app='CommunityApp')
@@ -45,38 +45,5 @@ block js
         query.then(function (res) {
           $scope.games = res.data; 
         });
-
-
-      /*
-          These are the games that I pulled from the pick-up Ultimate site that I have heard are legit but I have never played:
-          Key Biscayne Ultimate (Never been to this game)
-          Contact: Grant
-          Email: gkunks@gmail.com
-          Phone: 561.247.2684
-          Website: http://www.ratradio.net
-
-          Sundays: 6:00 @ Mast Academy
-
-          Fields: Turf or Grass, depending on which field
-          Description: We've been playing at Key Biscayne and Virginia Key for over 10 years now, but we have been adding more and more people over the last few years. Most of our players are from Key Biscayne but we have a good amount who come from the mainland. We range in age from 16 to 60 (average late 20's) years old, mostly male. We are pretty liberal with the rules (ie. NO hold/stall count or bricks) but most violations are enforced one way or another. 
-
-          Hialeah Ultimate Frisbee (Never been to this game)
-          Contact: Daniela Larez
-          Email: daniela.larez@gmail.com
-          Website: https://www.facebook.com/groups/87229532865/?notif_t=group_name_change
-
-          Thursdays: 6:30PM-9PM
-
-          Fields: Grass field Outdoors
-          Description: THURSDAYS: 
-          Sparks Park
-          1301 W 60th St, Hialeah, FL 33012
-          6:30 PM – 9:00 PM
-
-          SUNDAYS: Please email or follow us at 
-          https://www.facebook.com/groups/87229532865/?fref=ts
-          for updates
-
-       */
     });
 
