--- a/public/styles/site/_variables.scss
+++ b/public/styles/site/_variables.scss
@@ -1,4 +1,6 @@
 // Override Bootstrap variables in this file, e.g.
 
 $font-size-base: 16px;
-$font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif
+$font-family-sans-serif: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$headings-font-family: "Roboto Condensed", $font-family-sans-serif;
+$headings-font-weight: 700
