--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,12 +20,14 @@ block content
           img.logo-circled.img-responsive(src='/images/logo-circled.png')
         .col-sm-8
           h1 Welcome!
-          p South Florida Ultimate's 2016 Spring League season is now under way!
-          a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
+          p South Florida Ultimate's 2016 Fall League registration is almost ready.  Please check back in a few hours!
+          //- a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
     .row
       .col-md-8
         .banner
           ul
+            li
+              img.img-responsive(src="/images/league-champions-2016-spring.jpg")
             li
               img.img-responsive(src="/images/league-champions-2015-fall.jpg")
             li
@@ -37,14 +39,17 @@ block content
             li
               img.img-responsive(src="/images/league-champions-2013-spring.jpg")
       .col-md-4
-          h3 2016 League Standings
-          table.table.table-striped(id="standings")
-            thead
-              th Color
-              th Wins
-              th Losses
-              th Point Diff
-            tbody
+          h3 Building Ultimate
+          p Since 1968, The South Florida League brings together beginner and expert players from across Dade & Broward with the expressed goal of growing the awesome sport of Ultimate Frisbee.
+          .standings.hidden
+            h3 2016 League Standings
+            table.table.table-striped(id="standings")
+              thead
+                th Color
+                th Wins
+                th Losses
+                th Point Diff
+              tbody
 
 block js
   script(src="https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/js/unslider-min.js")
@@ -56,6 +61,8 @@ block js
         arrows: false,
         nav: false
       });
+
+      return
 
       var $standings = $("#standings").find('tbody');
 
