--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -11,20 +11,19 @@ block head
 
 block content
   .container: .row: .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
-    h1 2016 Spring League Registration
+    h1 2016 Fall League Registration
 
     h3 Summary
 
-    p This spring we'll be back at Ives Estates Park, just off I-95 at Ives Dairy Road.
-    iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31005.449205043788!2d-80.19220334227433!3d25.967580427814696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ac3d69e2ec2d%3A0xa21f0a46872e76b8!2sIves+Estate+Park!5e0!3m2!1sen!2sus!4v1452868641288" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen)
-    p Regular season games will be <strong>Sunday afternoons at either 3pm, 5pm or 7pm, starting February 21st</strong>. We're planning on 9 weeks of play, skipping March 27th for Easter and March 6th due to field closures, and ending on April 24th. <strong>Finals are set for Saturday, Apr 30th</strong> at Amelia Earhart Park.
+    p This fall we'll be back at Amelia Earhart Park, just off I-95 at Ives Dairy Road.
+    iframe(src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14358.205887616712!2d-80.2784486!3d25.8842357!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5fd60d3c7189a581!2sAmelia+Earhart+Park!5e0!3m2!1sen!2sus!4v1475028057840" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen)
+    p Regular season games will be <strong>Tuesday evenings at 8pm, starting October 4th</strong>. We're planning on 9 weeks of play, skipping the Tuesday of Thanksgiving Weekend. <strong>Finals are still being determined, and will be</strong> at Amelia Earhart Park.
 
-    p Registration will be open <strong>February 1st-13th</strong> and the costs are:
+    p Registration is open <strong>as of September 28th</strong> and the costs are:
     ul
       li $30 for students
       li $50 for everyone else
-    p The fee includes the games, playoffs, events and pre-season party.  Late registration (at a $65 fee for everyone, as space permits) will be Feb. 14th-16th.
-    p The pre-season kickoff party will be Saturday, February 13th at Haulover Beach. We'll send more details on that as it gets closer.
+    p The fee includes the games, playoffs & events.  Late registration (at a $65 fee for everyone, as space permits) will continue until after the first week of play.
 
     hr
 
