--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,7 +20,10 @@ block content
           img.logo-circled.img-responsive(src='/images/logo-circled.png')
         .col-sm-8
           h1 Welcome!
-          p South Florida Ultimate's 2016 Fall League registration is almost ready.  Please check back in a few hours!
+          p South Florida Ultimate's 2016 Fall League registration is open!
+          a.btn.btn-primary.btn-lg(href="/register")
+            i.fa.fa-sign-in
+            |  Register Now!
           //- a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
     .row
       .col-md-8
@@ -41,6 +44,7 @@ block content
       .col-md-4
           h3 Building Ultimate
           p Since 1968, The South Florida League brings together beginner and expert players from across Dade & Broward with the expressed goal of growing the awesome sport of Ultimate Frisbee.
+          p We are excited to bring you another season of Ultimate, and look forward to drafting our next set of teams and setting our new schedule.
           .standings.hidden
             h3 2016 League Standings
             table.table.table-striped(id="standings")
