--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,10 +20,10 @@ block content
           img.logo-circled.img-responsive(src='/images/logo-circled.png')
         .col-sm-8
           h1 Welcome!
-          p South Florida Ultimate's 2016 Fall League registration is open!
-          a.btn.btn-primary.btn-lg(href="/register")
-            i.fa.fa-sign-in
-            |  Register Now!
+          p South Florida Ultimate's 2016 Fall League registration has closed!  Information about teams should appear shortly.
+          //- a.btn.btn-primary.btn-lg(href="/register")
+          //-   i.fa.fa-sign-in
+          //-   |  Register Now!
           //- a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
     .row
       .col-md-8
