--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -6,38 +6,40 @@
 
   <div style="padding: 1em;">
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px; color:#333">
-      Hi South Florida!
+      Hi Captains!
     </p>
 
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      <strong>Tomorrow</strong>, Sunday October 2nd, is the <strong>last day to register</strong>.  
+      Please view your teams and reply all here to confirm that you received the players you selected:
     </p>
 
     <div style="text-align: center;">
-      <a style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; line-height: 25px; color: white; background: #333; display: inline-block; padding: 15px 30px; margin: 0; text-transform: uppercase; border-radius: 5px; font-weight: bold; text-decoration: none;" href="http://www.sflultimate.com/register" target="_blank">
-        Register now
+      <a style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; line-height: 25px; color: white; background: #333; display: inline-block; padding: 15px 30px; margin: 0; text-transform: uppercase; border-radius: 5px; font-weight: bold; text-decoration: none;" href="http://www.sflultimate.com/teams" target="_blank">
+        View Teams
       </a>
     </div>
 
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      Should you have any financial concerns preventing you from registering, please feel free to reach out to us privately.
+      We are internally discussing extending late registration, and having a mini-draft to pick the additional players.
     </p>
 
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      Once we have selected teams and organized the rosters, we'll be sure to notify you of your newly minted teams & captains.
+      We will keep you posted.  Once you confirm your players I will share you the e-mails of your teammates.  Please message and introduce yourselves.
     </p>
-
-    <img src="http://www.sflultimate.com/images/league-champions-2016-spring.jpg" style="max-width: 100%; max-height: 500px">
 
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333; margin-bottom: 0.5em;">
-      Have a great weekend!<br>
+      Have a great day!<br>
       South Florida Ultimate
     </p>
-    <div>
-      <a href="https://www.facebook.com/sflultimate/"><img src="http://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px"></a>
-      <a href="http://www.sflultimate.com/"><img src="http://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px"></a>
-      <a href="mailto:sflultimate@gmail.com"><img src="http://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px"></a>
-    </div>
+  </div>
+
+  <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
+    <a href="https://www.facebook.com/sflultimate/"><img src="http://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px"></a>
+    <a href="http://www.sflultimate.com/"><img src="http://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px"></a>
+    <a href="mailto:sflultimate@gmail.com"><img src="http://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px"></a>
   </div>
 
 </div>
+
+
+
