Added pink color

--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -117,7 +117,7 @@ $logo-width: 130px;
 .grey   { background-color: grey;    .stats & {background-color: rgba(grey,    0.25);}}
 .green  { background-color: green;   .stats & {background-color: rgba(green,   0.25);}}
 .black  { background-color: black;   .stats & {background-color: rgba(black,   0.25);}}
-
+.pink   { background-color: #ff40b3; .stats & {background-color: rgba(#ff40b3, 0.25);}}
 
 
 .navbar-inverse .navbar-nav > li > a {
