--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -6,37 +6,35 @@
 
   <div style="padding: 1em;">
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px; color:#333">
-      Hi Captains!
+      Hi Players!
     </p>
 
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      Please view your teams and reply all here to confirm that you received the players you selected:
-    </p>
-
-    <div style="text-align: center;">
-      <a style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; line-height: 25px; color: white; background: #333; display: inline-block; padding: 15px 30px; margin: 0; text-transform: uppercase; border-radius: 5px; font-weight: bold; text-decoration: none;" href="http://www.sflultimate.com/teams" target="_blank">
-        View Teams
-      </a>
-    </div>
-
-    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      We are internally discussing extending late registration, and having a mini-draft to pick the additional players.
+      Just so we are all clear, games start tonight at 8pm, and will be on Tuesdays moving forward.
     </p>
 
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      We will keep you posted.  Once you confirm your players I will share you the e-mails of your teammates.  Please message and introduce yourselves.
+      As mentioned previously, please bring a <strong>light jersey & a dark jersey,</strong> as league jerseys will take a couple of weeks to be designed & delivered.
+    </p>
+
+    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
+      Please be on the lookout for an e-mail in case the park closes due to inclement weather.
+    </p>
+
+    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
+      Should you have any questions or issues, please feel free to reach out to our e-mail at <strong>sflultimate@gmail.com</strong>.
     </p>
 
     <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333; margin-bottom: 0.5em;">
-      Have a great day!<br>
+      See you later tonight!<br>
       South Florida Ultimate
     </p>
   </div>
 
   <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
-    <a href="https://www.facebook.com/sflultimate/"><img src="http://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px"></a>
-    <a href="http://www.sflultimate.com/"><img src="http://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px"></a>
-    <a href="mailto:sflultimate@gmail.com"><img src="http://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px"></a>
+    <a href="https://www.facebook.com/sflultimate/"><img src="http://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px; padding: 5px;"></a>
+    <a href="http://www.sflultimate.com/"><img src="http://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px;padding: 5px;"></a>
+    <a href="mailto:sflultimate@gmail.com"><img src="http://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px;padding: 5px"></a>
   </div>
 
 </div>
