--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,11 +20,11 @@ block content
           img.logo-circled.img-responsive(src='/images/logo-circled.png')
         .col-sm-8
           h1 Welcome!
-          p We are offering late registration until Sunday, October 9th at noon.  After that registration period teams will be locked for the remainder of the season.
-          a.btn.btn-primary.btn-lg(href="/register")
-            i.fa.fa-sign-in
-            |  Register Now!
-          //- a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
+          p Check out this season's schedule.  Stats to come soon!
+          //- a.btn.btn-primary.btn-lg(href="/register")
+            //- i.fa.fa-sign-in
+            //- |  Register Now!
+          a.btn.btn-primary.btn-lg(href="/schedule") View Schedule
     .row
       .col-md-8
         .banner
