--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -10,11 +10,11 @@ block content
     h1 Spring League Stats
     section(ng-controller='StatsViewController')
 
-      if (false)
+      if (true)
         .alert.alert-info
           i.fa.fa-info-circle
           strong  Incomplete Stats: 
-          span We still have yet to put in stats for the following teams from <u>Week 3</u> and <u>Week 4</u>: Black
+          span We still have yet to put in stats teams from <u>Week 2</u> and <u>Week 3</u>. Please check again in the coming days.
 
       h2 Leaderboard
 
