--- a/templates/views/sheets.jade
+++ b/templates/views/sheets.jade
@@ -1,30 +1,45 @@
 html
   head
-    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' media='all')
     title South Florida Fall League 2016 Stat Sheet
+    link(rel='stylesheet' href='/styles/site.css' media='all')
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed")
+    style.
+      td, th {
+        font-size: 1.5em;
+      }
+
+      .table-bordered, .table-bordered td, .table-bordered th {
+        border: 3px solid #4a4a4a !important;
+      }
   body(ng-app='StatSheetApp')
 
     .container(ng-controller='StatSheetController')
-      div(style='page-break-after: always' ng-repeat="team in teams")
-        header.page-header
-          h1 
-            | Team {{team.color}} 
-            small Stat Sheet
 
-        h3 Opponent:
-        h3 Game Date:
+      section(ng-repeat="team in teams" style='page-break-after: always')
+        .row
+          .col-xs-8
+            header.page-header
+              h1 
+                | Team {{team.color}} 
+                small Stat Sheet
 
-        br
+            h3 Game Date:
 
-        table.table.table-bordered.table-striped
-          thead
-            th Our Score
-            th Their Score
-          tbody
-            tr
-              td(style='height:100px')
-              td(style='height:100px')
+            table.table.table-bordered.table-striped
+              thead
+                th Team
+                th Score
+              tbody
+                tr
+                  td(style='width: 40%') {{team.color}}
+                  td
+                tr
+                  td(style='width: 40%') Opponent:
+                  td
+          .col-xs-4
+            img(src='/images/flamingo-logo.png' class='img-responsive' style='max-height: 300px; float: right; margin-top: 1em')
 
+        hr
         br
 
         table.table.table-bordered.table-striped
@@ -35,7 +50,7 @@ html
             th Defenses
           tbody
             tr(ng-repeat="player in team.players | orderBy: 'name.first'")
-              td.lead(style='width: 25%') {{player.name.first}} {{player.name.last}}
+              td(style='width: 25%') {{player.name.first}} {{player.name.last}}
               td(style='width: 25%')
               td(style='width: 25%')
               td(style='width: 25%')
