--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -14,7 +14,7 @@ block content
         .alert.alert-info
           i.fa.fa-info-circle
           strong  Incomplete Stats: 
-          span We still have yet to put in stats teams from <u>Week 2</u> and <u>Week 3</u>. Please check again in the coming days.
+          span We still have yet to put in stats teams from <u>Week 2</u> and <u>Week 3</u> and Week 4. Please check again in the coming days.
 
       h2 Leaderboard
 
