--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -5,28 +5,30 @@
   </div>
 
   <div style="padding: 1em;">
-    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px; color:#333">
+    <p>
       Hi Players!
     </p>
 
-    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      Just so we are all clear, games start tonight at 8pm, and will be on Tuesdays moving forward.
+    <p>
+      We wanted to confirm to you that league finals will be held <strong>Saturday, December 10th, at 10am</strong>.  All teams will play two games.
     </p>
 
-    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      As mentioned previously, please bring a <strong>light jersey & a dark jersey,</strong> as league jerseys will take a couple of weeks to be designed & delivered.
+    <p>
+      As for jerseys, stats & standings, we are working on providing them, and apologize sincerely for the delay.  We do have the stats page up, but are missing the past three weeks of data.
     </p>
 
-    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
-      Please be on the lookout for an e-mail in case the park closes due to inclement weather.
-    </p>
+    <div style="text-align:center">
+      <a href="http://sflultimate.com/stats" style="font-family:-apple-system,blinkmacsystemfont,'segoe ui',roboto,helvetica,arial,sans-serif,'apple color emoji','segoe ui emoji','segoe ui symbol';font-size:18px;line-height:25px;color:white;background-image:initial;background-position:initial;background-size:initial;background-repeat:initial;background-origin:initial;background-clip:initial;background-color:rgb(51,51,51);display:inline-block;padding:15px 30px;margin:0px;text-transform:uppercase;border-radius:5px;font-weight:bold;text-decoration:none">
+        View Stats
+      </a>
+    </div>
 
-    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333">
+    <p>
       Should you have any questions or issues, please feel free to reach out to our e-mail at <strong>sflultimate@gmail.com</strong>.
     </p>
 
-    <p style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';font-size: 18px;line-height: 25px;font-size: 18px;line-height: 25px; color:#333; margin-bottom: 0.5em;">
-      See you later tonight!<br>
+    <p>
+      See you next week!<br>
       South Florida Ultimate
     </p>
   </div>
@@ -38,6 +40,27 @@
   </div>
 
 </div>
+
+<script>
+
+  var $ps = document.getElementsByTagName('p');
+
+  var pStyles = {
+    fontFamily:"-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
+    fontSize: "18px",
+    lineHeight: "25px",
+    color: "#333"    
+  };
+
+  
+  for (var i = 0; i < $ps.length; i++) {
+    for (var style in pStyles) {
+      $ps[i].style[style] = pStyles[style];
+    }
+  }
+
+
+</script>
 
 
 
