Updated Spring League stats

--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -14,7 +14,7 @@ block content
         .alert.alert-info
           i.fa.fa-info-circle
           strong  Incomplete Stats: 
-          span We still have yet to put in stats teams from <u>Week 2</u> and <u>Week 3</u> and Week 4. Please check again in the coming days.
+          span We still are missing stats from <u>all teams on Week 2</u>, <u>Blue & Black on Week 3</u>, and Green on <u>Week 4</u>.
 
       h2 Leaderboard
 
