--- a/templates/views/sheets.jade
+++ b/templates/views/sheets.jade
@@ -4,13 +4,25 @@ html
     link(rel='stylesheet' href='/styles/site.css' media='all')
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed")
     style.
-      td, th {
+      @page {
+          size: auto;
+          margin: 1em;
+      }
+
+      td, th, p {
         font-size: 1.5em;
       }
 
       .table-bordered, .table-bordered td, .table-bordered th {
         border: 3px solid #4a4a4a !important;
       }
+
+      .logo {
+        max-height: 340px;
+        float: right;
+        margin-top: 1em;
+      }
+
   body(ng-app='StatSheetApp')
 
     .container(ng-controller='StatSheetController')
@@ -37,7 +49,7 @@ html
                   td(style='width: 40%') Opponent:
                   td
           .col-xs-4
-            img(src='/images/flamingo-logo.png' class='img-responsive' style='max-height: 300px; float: right; margin-top: 1em')
+            img(src='/images/flamingo-logo.png' class='img-responsive logo')
 
         hr
         br
