Added updated data for stats

--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -14,7 +14,7 @@ block content
         .alert.alert-info
           i.fa.fa-info-circle
           strong  Incomplete Stats: 
-          span We still are missing stats from <u>all teams on Week 2</u>, <u>Blue & Black on Week 3</u>, and Green on <u>Week 4</u>.
+          span We still are missing stats from: Black, Blue, and Pink on Week 2 and Blue on Week 3.
 
       h2 Leaderboard
 
