--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="League Stats")
   meta(property="og:url"          content="http://www.sflultimate.com/stats")
-  meta(property="og:description"  content="Find out who is making big plays for this year's Spring League.")
+  meta(property="og:description"  content="Find out who is making big plays for this year's Fall League.")
 
 block content
   .container(ng-app='StatsApp')
